commit by amaal